--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,13 +1,10 @@
 {
   "version": 2,
- 
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/",
+      "src": "(.*)",  // Matches all paths except API endpoints (optional)
       "headers": {
-        "Access-Control-Allow-Origin": "https://linea-gpt.vercel.app",
-        
+        "Access-Control-Allow-Origin": "https://linea-gpt.vercel.app", // Replace with your frontend origin
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept"
       }
