--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chatapp",
   "version": "0.1.0",
   "private": true,
-  "proxy":"https://linea-gpt-api.vercel.app"
+  "proxy":"https://linea-gpt-api.vercel.app/"
   "scripts": {
     "dev": "next dev",
     "build": "next build",
