--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,7 +4,7 @@
  "routes": [
   {
    "src": "/(.*)",
-   "dest": "/",
+   "dest": "/chat",
    "headers": {
     "Access-Control-Allow-Origin": "https://linea-gpt.vercel.app",
      
