--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,16 +1,29 @@
 {
- "version": 2,
- 
- "routes": [
-  {
-   "src": "/(.*)",
-   "dest": "/",
-   "headers": {
-    "Access-Control-Allow-Origin": "https://linea-gpt.vercel.app",
-     
-    "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-    "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept"
-   }
-  }
- ]
+  "version": 2,
+  "routes": [
+    {
+      "src": "/chat",
+      "dest": "https://linea-gpt-api.vercel.app/chat",
+      "methods": ["POST"]
+    }
+  ],
+  "headers": [
+    {
+      "source": "/chat",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "https://linea-gpt.vercel.app"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "POST, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type"
+        }
+      ]
+    }
+  ]
 }
