--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "server": "nodemon server"
+    "start": "node server.js" 
   },
   "dependencies": {
     "cors": "^2.8.5",
