--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,23 +1,9 @@
 {
   "version": 2,
-  
-  "headers": [
+  "builds": [
     {
-      "source": "/chat",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "https://linea-gpt.vercel.app"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "POST, OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type"
-        }
-      ]
+      "src": "./server.js", // Replace with your server's entry file
+      "use": "@vercel/node"
     }
   ]
 }
