--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "./server.js", // Replace with your server's entry file
+      "src": "./server.js", 
       "use": "@vercel/node"
     }
   ]
